ver 0.22.7 (not yet released)
* protocol
  - don't use glibc extension to parse time stamps
* decoder
  - ffmpeg: fix build problem with FFmpeg 3.4
* storage
  - curl: don't use glibc extension
* output
  - wasapi: add algorithm for finding usable audio format
  - wasapi: use default device only if none was configured

ver 0.22.6 (2021/02/16)
* fix missing tags on songs in queue

ver 0.22.5 (2021/02/15)
* protocol
  - error for malformed ranges instead of ignoring silently
  - better error message for open-ended range with "move"
* database
  - simple: fix missing CUE sheet metadata in "addid" command
* tags
  - id: translate TPE3 to Conductor, not Performer
* archive
  - iso9660: another fix for unaligned reads
* output
  - httpd: error handling on Windows improved
  - pulse: fix deadlock with "always_on"
* Windows:
  - enable https:// support (via Schannel)
* Android
  - work around "Permission denied" on mpd.conf

ver 0.22.4 (2021/01/21)
* protocol
  - add command "binarylimit" to allow larger chunk sizes
  - fix "readpicture" on 32 bit machines
  - show duration and tags of songs in virtual playlist (CUE) folders
* storage
  - curl: fix several WebDAV protocol bugs
* decoder
  - dsdiff: apply padding to odd-sized chunks
* filter
  - ffmpeg: detect the output sample format
* output
  - moveoutput: fix always_on and tag lost on move
* Android
  - enable https:// support (via OpenSSL)

ver 0.22.3 (2020/11/06)
* playlist
  - add option "as_directory", making CUE file expansion optional
* storage
  - curl: fix crash bug
* filter
  - fix garbage after "Audio format not supported by filter" message
  - ffmpeg: support planar output
  - ffmpeg: support sample formats other than 16 bit

ver 0.22.2 (2020/10/28)
* database
  - simple: purge songs and virtual directories for unavailable plugins
    on update
* input
  - qobuz/tidal: fix protocol errors due to newlines in error messages
  - smbclient: disable by default due to libsmbclient crash bug
* playlist